--- a/library.properties
+++ b/library.properties
@@ -1,8 +1,8 @@
 name=HCSR04
-version=1.1.0
-author=Martin Sosic <sosic.martin@gmail.com>
-maintainer=Martin Sosic <sosic.martin@gmail.com>
-sentence=Library for HC-SR04 ultrasonic distance sensor.
+version=1.1.1
+author=Nikki Moreaux <contact@nmoreaux.com>
+maintainer=Nikki Moreaux <contact@nmoreaux.com>
+sentence=Library for HC-SR04 ultrasonic distance sensor with timeout.
 paragraph=You can measure distance in centimeters.
 category=Sensors
 url=https://github.com/nikkimoreaux/arduino-lib-hc-sr04-with-timeout
